# Facultad

./: .gitignore  README.md
Cuarto/Laboratorio/: Resumen_Ejercicio3_Practica5.docx  (+4 more)
Sexto_Cuatrimestre/Blockchain/Prácticas/Resoluciones/Práctica_4/: pyproject.toml
Sexto_Cuatrimestre/Blockchain/Prácticas/Resoluciones/Práctica_4/brownie/: brownie-config.yaml
Sexto_Cuatrimestre/Blockchain/Prácticas/Resoluciones/Práctica_4/brownie/contracts/: RegistroDeUsuarios.sol
Tercero/Blockchain/: pyproject.toml
Tercero/Blockchain/Prácticas/Resoluciones/Practica_5/: .gitignore
Tercero/Blockchain/Prácticas/Resoluciones/Practica_5/src/: concesionario_auto.rs  fecha.rs  persona.rs
Tercero/Blockchain/Prácticas/Resoluciones/Practica_5/tests/: auto_test.rs  fecha_test.rs  persona_test.rs
Tercero/Blockchain/Prácticas/Resoluciones/Practica_6/SimpleCounter/: lib.rs
Tercero/Blockchain/Prácticas/Resoluciones/Practica_6/interfaces/: Cargo.toml  lib.rs
Tercero/Blockchain/Prácticas/Resoluciones/Practica_6/storage/: Cargo.toml
Tercero/Blockchain/Prácticas/Resoluciones/Practica_6/user/: Cargo.toml
Tercero/Blockchain/Prácticas/Resoluciones/Práctica_1/: Ej_1.py  Ej_2.py  tempCodeRunnerFile.py
Tercero/Blockchain/Prácticas/Resoluciones/Práctica_2/: ContadorSimple.sol  MuroDeMensajes.sol  Votacion.sol
Tercero/Blockchain/Prácticas/Resoluciones/Práctica_4/brownie/: brownie-config.yaml
Tercero/Blockchain/ejemplos/Clase 1/: ejemplo1.py  ejemplo2.py  ejemplo3.py
Tercero/Blockchain/ejemplos/Clase 2/: ejemplo1.py  ejemplo2.py
Tercero/Blockchain/ejemplos/Clase 4/: ejemplo1.py
(+872 files in other folders)
